--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,67 @@
-python<3.5
-streamlit
-pandas
-matplotlib==3.7.3
-plotly_express
-pyfish
-mpld3
-streamlit-sortables
-python-kaleido
+altair==5.5.0
+attrs==25.3.0
+blinker==1.9.0
+Brotli==1.1.0
+cachetools==6.1.0
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+click==8.2.1
+colorama==0.4.6
+contourpy==1.3.3
+cycler==0.12.1
+fonttools==4.59.0
+gitdb==4.0.12
+GitPython==3.1.45
+h2==4.2.0
+hpack==4.1.0
+hyperframe==6.1.0
+idna==3.10
+importlib_metadata==8.7.0
+Jinja2==3.1.6
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
+kaleido==0.2.1
+kiwisolver==1.4.9
+MarkupSafe==3.0.2
+matplotlib==3.10.5
+mpld3==0.5.11
+munkres==1.1.4
+narwhals==2.1.1
+numpy==2.3.2
+packaging==25.0
+pandas==2.3.1
+patsy==1.0.1
+pillow==11.3.0
+pip==25.2
+plotly==6.3.0
+plotly-express==0.4.1
+protobuf==6.31.1
+pyarrow==21.0.0
+pycparser==2.22
+pydeck==0.9.1
+pyfish==1.0.3
+pyparsing==3.2.3
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.4
+rpds-py==0.27.0
+scipy==1.16.1
+six==1.17.0
+smmap==5.0.2
+statsmodels==0.14.5
+streamlit==1.48.0
+streamlit-sortables==0.3.1
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.5.2
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+watchdog==6.0.0
+win_inet_pton==1.1.0
+zipp==3.23.0
+zstandard==0.23.0
